force-app/main/default/objects/PMC_DH_ModalReasonList__mdt/PMC_DH_ModalReasonList__mdt.object-meta.xml
<CustomObject>
    <label>PMC_DH_ModalReasonList</label>
    <pluralLabel>PMC_DH_ModalReasonLists</pluralLabel>
</CustomObject>