force-app/main/default/objects/PMC_DH_ModalReasonList__mdt/fields/PMC_DH_Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Custom_Label__c</fullName>
    <label>PMC DH Custom Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>