force-app/main/default/objects/PMC_DH_ModalReasonList__mdt/fields/PMC_DH_Position__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Position__c</fullName>
    <label>Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>