force-app/main/default/objects/PMC_DH_ModalReasonList__mdt/fields/PMC_DH_Type__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Type__c</fullName>
    <label>Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>