force-app/main/default/objects/PMC_DH_ModalReasonList__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>PMC_DH_Custom_Label__c</columns>
    <columns>PMC_DH_Position__c</columns>
    <columns>PMC_DH_Type__c</columns>
    <columns>PMC_DH_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>